# invariant

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_TEST_SEQUENCE.md  INVARIANT_Build_Plan.docx  INVARIANT_DEBUG_REPORT.md  INVARIANT_Execution_Plan.docx  INVARIANT_TEST_SEQUENCE.md  README.md  ROADMAP.md  SECURITY.md  SUBNET_PARAMS.json  THREAT_MODEL.md  fast_register_local.py  fund_wallets.py  instant_register.py  invariant_gates.py  invariant_oap.py  miner.py  pyproject.toml  register_invariant.py  requirements.txt  run_tests.py  start_local.sh  validator.py  watch_build.sh
.github/workflows/: ci.yml
docs/: DEPLOYMENT_GUIDE.md  INCENTIVE_MECHANISM.md  LOCAL_TESTING.md  PITCH.md  WHITEPAPER.md
invariant/: __init__.py  protocol.py
invariant/invariant/: __init__.py
invariant/invariant-gates/: Cargo.toml
invariant/invariant-gates/benches/: gate_bench.rs
invariant/invariant-gates/src/: crypto.rs  lib.rs  receipt.rs  registry.rs  verifier.rs
invariant/invariant/phase1_bittensor/: miner.py  validator.py
invariant/invariant/phase1_core/: invariant_gates.py  invariant_gates_bridge.py
invariant/invariant/tests/: test_invariant.py
invariant/phase1_bittensor/: __init__.py
invariant/phase1_core/: __init__.py  invariant_oap.py
scripts/: deploy_testnet.py  launch_nodes.py  register_subnet.py  setup_wallets.py  test_locally.py
sdk/invariant-miner/: pyproject.toml
sdk/invariant-miner/invariant_miner/: __init__.py  _backend.py  builder.py  cli.py  errors.py  gate.py  identity.py  receipt.py  registry.py  verifier.py
