[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Package metadata
# ─────────────────────────────────────────────────────────────────────────────

[project]
name            = "invariant-miner"
version         = "1.0.0"
description     = "INVARIANT Miner SDK — cryptographic execution receipts for Bittensor"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "Orthonode Infrastructure Labs", email = "contact@orthonode.xyz" }
]

keywords = [
    "bittensor", "invariant", "miner", "receipt", "verification",
    "cryptography", "sha256", "trust", "nts", "subnet",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ── Runtime dependencies ──────────────────────────────────────────────────────
# Core: pure Python, zero mandatory deps beyond stdlib.
# The Rust extension (invariant_gates_rs) is an optional speed-up.
dependencies = []

[project.optional-dependencies]
# Install bittensor integration helpers
bittensor = [
    "bittensor>=9.12.0",
    "numpy>=1.24.0",
]
# Development tooling
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "build>=1.0",
    "twine>=4.0",
]

# ── Entry points ──────────────────────────────────────────────────────────────
[project.scripts]
invariant-info  = "invariant_miner.cli:info"
invariant-check = "invariant_miner.cli:check"

# ── URLs ──────────────────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://orthonode.xyz"
Repository    = "https://github.com/orthonode/invariant"
Documentation = "https://github.com/orthonode/invariant/blob/main/sdk/invariant-miner/README.md"
"Bug Tracker" = "https://github.com/orthonode/invariant/issues"

# ─────────────────────────────────────────────────────────────────────────────
# Setuptools config
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["invariant_miner*"]

[tool.setuptools.package-data]
invariant_miner = ["py.typed"]

# ─────────────────────────────────────────────────────────────────────────────
# Test config
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
